feat: create images api document in openapi.yaml
