# documents/openapi.yaml
@@ -5,7 +5,10 @@ info:
     # About Us
       **The Sequoia Humane Society** is a non-profit with the mission of providing shelter and humane care for animals. We work vigorously to reduce the tragedy of euthanasia caused by too many animals, and not enough homes.<br></br>
       **The AI-Powered Pet Matchmaker** streamlines pet adoption by using intelligent algorithms to match potential adopters with compatible animals based on lifestyle, living situation, experience level, and preferences.<br></br>
-      This document outlines our **REST APIs**, detailing the requests and responses for seamless communication with the `React` frontend. This should help other developers understand our integration points clearly.
+      This document outlines our **REST APIs**, detailing the requests and responses for seamless communication with the `React` frontend. This should help other developers understand our integration points clearly. <br></br>
+    # Prerequistes
+    **Node.js** >= **20.16.0** and **npm** >= **10.8.2** are the minimum required versions that this repo runs on, but we always recommend using the latest version of Node.js.<br></br>
+    Our API uses **AWS S3 Bucket** to store images content. To understand how to create and use AWS S3, watch this <a href="https://www.youtube.com/watch?v=eQAIojcArRY&t=996s" target="_blank">video</a>
   version: '0.0.1'
   termsOfService:  https://github.com/2025-Arizona-Opportunity-Hack-Summer/Devilware-SequoiaHumaneSociety
   contact:
@@ -29,6 +32,8 @@ tags:
     description: Images-related operations (with AWS)
     externalDocs:
       url: https://www.youtube.com/watch?v=eQAIojcArRY&t=996s
+      description: To understand how to store images in AWS
+
 paths:
   /users:
     post:
@@ -424,16 +429,33 @@ paths:
     post:
       tags: [Images]
       summary: Upload images to AWS
+      externalDocs:
+        url:  https://www.npmjs.com/package/multer
+        description: The node.js library to handle images file
       description: |
-        Images are stored in AWS. This API will create images in AWS and images store in database are just the file name, in other words, they are list of strings instead of directory of files.   
+        Images are stored in AWS. This API will create images in AWS and images store in database are just the file name, in other words, they are list of strings instead of directory of files. 
       responses:
         '201':
           description: Images are in AWS
         '500':
           $ref: "#/components/responses/InternalServerError"
-
-        
-    
+    delete:
+      tags: [Images]
+      summary: Delete images in AWS
+      description: Remove images permanently from AWS
+      parameters:
+        - name: deleteImages
+          in: query
+          schema: 
+            type: array
+            items:
+              type: string
+          example: [brownie.jpg, brownie_1.png]
+      responses:
+        '204':
+          description: Images are removed from AWS
+        '500':
+          $ref: "#/components/responses/InternalServerError"
 components:
   parameters:
     emailPathParam:
@@ -545,6 +567,7 @@ components:
           items:
             type: string
           example: [brownie.jpg, brownie_1.png]
+          description: Stored images in database are just a string of filename, the content of images file are stored in AWS
       required: [id, age, species, weight, breed, characteristic, adoptionFee, sex, name, animal_id, active_level, _id]
   requestBodies:
     User:
